[package]
name = "turnstiles"
version = "0.2.3"
authors = ["Graeme Gossel <graeme.gossel@gmail.com>"]
description = "Seamless file rotation"
edition = "2021"
license = "MIT"
homepage = "https://github.com/Zylatis/turnstiles"
repository = "https://github.com/Zylatis/turnstiles"
keywords = ["log", "logging", "rotation"]
categories = ["development-tools::debugging", "filesystem"]

[dependencies]
anyhow = "1.0"

[dev-dependencies]
tempdir = {path = "tempdir", version = "0.1.0"}
slog = { version="2.7.0", features = ["release_max_level_debug"]}
slog-async = "2.7.0"
slog-json = "2.4.0"
